--- a/docs/docs/cmd/pa/app/app-owner-set.mdx
+++ b/docs/docs/cmd/pa/app/app-owner-set.mdx
@@ -22,7 +22,7 @@ m365 pa app owner set [options]
 : The name (GUID) of the Microsoft Power App.
 
 `--userId [userId]`
-: The Azure AD ID of the new owner. Specify either `userId` or `userName` but not both.
+: The Microsoft Entra ID ID of the new owner. Specify either `userId` or `userName` but not both.
 
 `--userName [userName]`
 : The user principal name of the new owner. Specify either `userId` or `userName` but not both.
