--- a/docs/docs/cmd/planner/roster/roster-plan-list.mdx
+++ b/docs/docs/cmd/planner/roster/roster-plan-list.mdx
@@ -16,7 +16,7 @@ m365 planner roster plan list [options]
 
 ```md definition-list
 `--userId [userId]`
-: User's Azure AD ID. Specify either `userId` or `userName` but not both. Specify this option only when using application permissions.
+: User's Microsoft Entra ID ID. Specify either `userId` or `userName` but not both. Specify this option only when using application permissions.
 
 `--userName [userName]`
 : User's UPN (user principal name, e.g. johndoe@example.com). Specify either `userId` or `userName` but not both. Specify this option only when using application permissions.
