--- a/docs/docs/cmd/purview/auditlog/auditlog-list.mdx
+++ b/docs/docs/cmd/purview/auditlog/auditlog-list.mdx
@@ -49,7 +49,7 @@ Retrieving audit logs is an intensive process, especially for large or active te
 
 When you specify a value for `contentType`, consider the following:
 
-- `AzureActiveDirectory` includes all Azure AD audit logs.
+- `AzureActiveDirectory` includes all Microsoft Entra ID audit logs.
 - `Exchange` includes all Exchange audit logs.
 - `SharePoint` includes all SharePoint audit logs.
 - `General` includes all other workloads not included in the previous content types.
