--- a/docs/docs/cmd/spo/file/file-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-add.mdx
@@ -29,7 +29,7 @@ m365 spo file roleassignment add [options]
 : upn/email of user to assign role to. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `--groupName [groupName]`
-: The group name of Azure AD or SharePoint group. Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The group name of Microsoft Entra ID or SharePoint group. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `--roleDefinitionId [roleDefinitionId]`
 : ID of role definition. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
