--- a/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/file/file-roleassignment-remove.mdx
@@ -29,7 +29,7 @@ m365 spo file roleassignment remove [options]
 : Upn/email of the user. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `--groupName [groupName]`
-: The group name of an Azure AD or SharePoint group. Specify either `upn`, `groupName`, or `principalId` but not multiple.
+: The group name of an Microsoft Entra ID or SharePoint group. Specify either `upn`, `groupName`, or `principalId` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirmation.
