--- a/docs/docs/cmd/spo/list/list-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/list/list-roleassignment-add.mdx
@@ -32,7 +32,7 @@ m365 spo list roleassignment add [options]
 : Upn/email of user to assign role to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: Enter group name of Azure AD or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: Enter group name of Microsoft Entra ID or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--roleDefinitionId [roleDefinitionId]`
 : ID of role definition. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
