--- a/docs/docs/cmd/spo/list/list-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/list/list-roleassignment-remove.mdx
@@ -32,7 +32,7 @@ m365 spo list roleassignment remove [options]
 : upn/email of user. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: enter group name of Azure AD or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: enter group name of Microsoft Entra ID or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirming removing the role assignment.
