--- a/docs/docs/cmd/spo/serviceprincipal/serviceprincipal-grant-list.mdx
+++ b/docs/docs/cmd/spo/serviceprincipal/serviceprincipal-grant-list.mdx
@@ -49,7 +49,7 @@ m365 spo serviceprincipal grant list
       "IsDomainIsolated": false,
       "ObjectId": "QqYEYFwYmkeZKhXRwj4iKV5QwbD60RVCo6xeMUG407E",
       "PackageName": null,
-      "Resource": "Windows Azure Active Directory",
+      "Resource": "Windows Microsoft Entra ID",
       "ResourceId": "b0c1505e-d1fa-4215-a3ac-5e3141b8d3b1",
       "Scope": "User.Read"
     }
@@ -62,7 +62,7 @@ m365 spo serviceprincipal grant list
   ```text
   IsDomainIsolated  ObjectId                                     PackageName  Resource                        ResourceId                            Scope
   ----------------  -------------------------------------------  -----------  ------------------------------  ------------------------------------  --------------------------
-  false             QqYEYFwYmkeZKhXRwj4iKV5QwbD60RVCo6xeMUG407E  null         Windows Azure Active Directory  b0c1505e-d1fa-4215-a3ac-5e3141b8d3b1  User.Read
+  false             QqYEYFwYmkeZKhXRwj4iKV5QwbD60RVCo6xeMUG407E  null         Windows Microsoft Entra ID  b0c1505e-d1fa-4215-a3ac-5e3141b8d3b1  User.Read
   ```
 
   </TabItem>
@@ -70,7 +70,7 @@ m365 spo serviceprincipal grant list
 
   ```csv
   IsDomainIsolated,ObjectId,PackageName,Resource,ResourceId,Scope
-  ,QqYEYFwYmkeZKhXRwj4iKV5QwbD60RVCo6xeMUG407E,,Windows Azure Active Directory,b0c1505e-d1fa-4215-a3ac-5e3141b8d3b1,User.Read
+  ,QqYEYFwYmkeZKhXRwj4iKV5QwbD60RVCo6xeMUG407E,,Windows Microsoft Entra ID,b0c1505e-d1fa-4215-a3ac-5e3141b8d3b1,User.Read
   ```
 
   </TabItem>
