--- a/docs/docs/cmd/spo/web/web-roleassignment-add.mdx
+++ b/docs/docs/cmd/spo/web/web-roleassignment-add.mdx
@@ -23,7 +23,7 @@ m365 spo web roleassignment add [options]
 : upn/email of user to assign role to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: enter group name of Azure AD or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: enter group name of Microsoft Entra ID or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--roleDefinitionId [roleDefinitionId]`
 : ID of role definition. Specify either `roleDefinitionId` or `roleDefinitionName` but not both.
