--- a/docs/docs/cmd/spo/web/web-roleassignment-remove.mdx
+++ b/docs/docs/cmd/spo/web/web-roleassignment-remove.mdx
@@ -23,7 +23,7 @@ m365 spo web roleassignment remove [options]
 : Upn/email of user to assign role to. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `--groupName [groupName]`
-: Enter group name of Azure AD or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
+: Enter group name of Microsoft Entra ID or SharePoint group. Specify either `principalId`, `upn`, or `groupName` but not multiple.
 
 `-f, --force`
 : Don't prompt for confirming removing the roleassignment.
