--- a/docs/docs/sample-scripts/spo/grant-api-permissions-aad/index.mdx
+++ b/docs/docs/sample-scripts/spo/grant-api-permissions-aad/index.mdx
@@ -6,7 +6,7 @@ tags:
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-# Grant API permissions to SharePoint Azure AD Application
+# Grant API permissions to SharePoint Microsoft Entra ID Application
 
 Author: [Michaël Maillot](https://michaelmaillot.github.io)
 
