--- a/docs/docs/sample-scripts/spo/remove-api-permissions/index.mdx
+++ b/docs/docs/sample-scripts/spo/remove-api-permissions/index.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 Author: [Waldek Mastykarz](https://blog.mastykarz.nl/sample-script-quickly-remove-sharepoint-api-permissions/)
 
-When building SharePoint Framework solutions connected to APIs secured with Azure Active Directory, you might need to clear the list of granted API permissions.
+When building SharePoint Framework solutions connected to APIs secured with Microsoft Entra ID, you might need to clear the list of granted API permissions.
 
 This script helps you to quickly remove SharePoint API permissions.
 
