--- a/docs/docs/sample-scripts/spo/remove-pending-api-permission-requests/index.mdx
+++ b/docs/docs/sample-scripts/spo/remove-pending-api-permission-requests/index.mdx
@@ -11,7 +11,7 @@ import TabItem from '@theme/TabItem';
 
 Author: [Waldek Mastykarz](https://blog.mastykarz.nl/sample-script-quickly-remove-pending-sharepoint-api-permission-requests/)
 
-When building SharePoint Framework solutions connected to APIs secured with Azure Active Directory,  you'll easily end up with many pending permission requests.
+When building SharePoint Framework solutions connected to APIs secured with Microsoft Entra ID,  you'll easily end up with many pending permission requests.
 
 This script helps you to quickly remove pending SharePoint API permission requests.
 
