--- a/docs/docs/cmd/external/connection/connection-add.mdx
+++ b/docs/docs/cmd/external/connection/connection-add.mdx
@@ -20,7 +20,7 @@ m365 search externalconnection add
 
 ```md definition-list
 `-i, --id <id>`
-: Developer-provided unique ID of the connection within the Azure Active Directory tenant.
+: Developer-provided unique ID of the connection within the Microsoft Entra ID tenant.
 
 `-n, --name <name>`
 : The display name of the connection to be displayed in the Microsoft 365 admin center. Maximum length of 128 characters.
@@ -29,7 +29,7 @@ m365 search externalconnection add
 : Description of the connection displayed in the Microsoft 365 admin center.
 
 `--authorizedAppIds [authorizedAppIds]`
-: Comma-separated collection of application IDs for registered Azure Active Directory apps that are allowed to manage the external connection and to index content in the external connection.
+: Comma-separated collection of application IDs for registered Microsoft Entra ID apps that are allowed to manage the external connection and to index content in the external connection.
 ```
 
 <Global />
