--- a/docs/docs/cmd/graph/schemaextension/schemaextension-add.mdx
+++ b/docs/docs/cmd/graph/schemaextension/schemaextension-add.mdx
@@ -22,7 +22,7 @@ m365 graph schemaextension add [options]
 : Description of the schema extension
 
 `--owner <owner>`
-: The Id ID the Azure AD application that is the owner of the schema extension
+: The Id ID the Microsoft Entra ID application that is the owner of the schema extension
 
 `-t, --targetTypes <targetTypes>`
 : Comma-separated list of Microsoft Graph resource types the schema extension targets
@@ -45,7 +45,7 @@ To create a schema extension, you have to specify a unique ID for the schema ext
 
 The schema extension ID cannot be changed after creation.
 
-The schema extension owner is the ID of the Azure AD application that is the owner of the schema extension. Once set, this property is read-only and cannot be changed.
+The schema extension owner is the ID of the Microsoft Entra ID application that is the owner of the schema extension. Once set, this property is read-only and cannot be changed.
 
 The target types are the set of Microsoft Graph resource types (that support schema extensions) that this schema extension definition can be applied to. This option is specified as a comma-separated list
 
