--- a/docs/docs/cmd/planner/roster/roster-member-get.mdx
+++ b/docs/docs/cmd/planner/roster/roster-member-get.mdx
@@ -19,7 +19,7 @@ m365 planner roster member get [options]
 : ID of the Planner Roster.
 
 `--userId [userId]`
-: User's Azure AD ID. Specify either `userId` or `userName` but not both.
+: User's Microsoft Entra ID ID. Specify either `userId` or `userName` but not both.
 
 `--userName [userName]`
 : User's UPN (user principal name, e.g. johndoe@example.com). Specify either `userId` or `userName` but not both.
