--- a/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-policysettings-list.mdx
+++ b/docs/docs/cmd/purview/sensitivitylabel/sensitivitylabel-policysettings-list.mdx
@@ -16,7 +16,7 @@ m365 purview sensitivitylabel policysettings list [options]
 
 ```md definition-list
 `--userId [userId]`
-: User's Azure AD ID. Optionally specify this if you want to get a list of policy settings for a sensitivity label that the user has access to. Specify either `userId` or `userName` but not both.
+: User's Microsoft Entra ID ID. Optionally specify this if you want to get a list of policy settings for a sensitivity label that the user has access to. Specify either `userId` or `userName` but not both.
 
 `--userName [userName]`
 : User's UPN (user principal name, e.g. johndoe@example.com). Optionally specify this if you want to get a list of policy settings for a sensitivity label that the user has access to. Specify either `userId` or `userName` but not both.
